welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: '(' expected but identifier found.
for i in range(8):
    ^